--- a/BooksManager/BooksManager/Views/Account/Login.cshtml
+++ b/BooksManager/BooksManager/Views/Account/Login.cshtml
@@ -1,5 +1,29 @@
-﻿<form asp-action="Login">
-    <input name="email" placeholder="Email" type="email" required />
-    <input name="password" placeholder="Senha" type="password" required />
-    <button type="submit">Login</button>
-</form>
+﻿@{
+    ViewData["Title"] = "Login";
+}
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h3 class="card-title text-center mb-4">Login</h3>
+
+                    <form asp-action="Login">
+                        <div class="form-group mb-3">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" class="form-control" placeholder="Digite seu email" required />
+                        </div>
+
+                        <div class="form-group mb-3">
+                            <label for="password">Senha</label>
+                            <input type="password" name="password" class="form-control" placeholder="Digite sua senha" required />
+                        </div>
+
+                        <button type="submit" class="btn btn-primary btn-block w-100">Entrar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
