--- a/BooksManager/BooksManager/Views/Account/Login.cshtml
+++ b/BooksManager/BooksManager/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <h3 class="card-title text-center mb-4">Login</h3>
 
-                    <form asp-action="Login">
+                    <form asp-action="Login" method="post">
                         <div class="form-group mb-3">
                             <label for="email">Email</label>
                             <input type="email" name="email" class="form-control" placeholder="Digite seu email" required />
