--- a/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
+++ b/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BooksManager</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -26,6 +26,29 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+
+                    <!-- Verifica se o usuário está logado -->
+                    <ul class="navbar-nav">
+                        @if (ViewContext.HttpContext.Session.GetString("UserId") != null)
+                        {
+                            <li class="nav-item">
+                                <span class="nav-link">Bem-vindo, @ViewContext.HttpContext.Session.GetString("UserName")!</span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Account/Logout">Sair</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Account/Login">Entrar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Account/Register">Registrar-se</a>
+                            </li>
+                        }
+                    </ul>
+
                 </div>
             </div>
         </nav>
