--- a/BooksManager/BooksManager/Views/Account/Login.cshtml
+++ b/BooksManager/BooksManager/Views/Account/Login.cshtml
@@ -5,22 +5,25 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h3 class="card-title text-center mb-4">Login</h3>
-
+            <div class="card shadow-lg border-0" style="background-color: #f5f3e6;">
+                <div class="card-body p-5">
+                    <h3 class="card-title text-center mb-4" style="color: #5a4e4d;">
+                        <i class="bi bi-box-arrow-in-right me-2"></i>Login
+                    </h3>
                     <form asp-action="Login" method="post">
                         <div class="form-group mb-3">
-                            <label for="email">Email</label>
+                            <label for="email" style="color: #6b4f4f;">Email</label>
                             <input type="email" name="email" class="form-control" placeholder="Digite seu email" required />
                         </div>
 
-                        <div class="form-group mb-3">
-                            <label for="password">Senha</label>
+                        <div class="form-group mb-4">
+                            <label for="password" style="color: #6b4f4f;">Senha</label>
                             <input type="password" name="password" class="form-control" placeholder="Digite sua senha" required />
                         </div>
 
-                        <button type="submit" class="btn btn-primary btn-block w-100">Entrar</button>
+                        <button type="submit" class="btn btn-primary w-100">
+                            <i class="bi bi-box-arrow-in-right"></i> Entrar
+                        </button>
                     </form>
                 </div>
             </div>
