--- a/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
+++ b/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
@@ -6,66 +6,124 @@
     <title>@ViewData["Title"] - BooksManager</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BooksManager.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMjqK7Ij9Z19D48CfF4GJ9zKBix+R6RkF3eJk1" crossorigin="anonymous">
+    <style>
+        /* Theme colors for a library/book style */
+        body {
+            background-color: #f9f7f1;
+            font-family: 'Georgia', serif;
+            display: grid;
+            min-height: 100dvh;
+            grid-template-rows: 1fr auto;
+        }
+
+        .navbar {
+            background-color: #4e342e;
+        }
+
+        .navbar-brand, .nav-link {
+            color: #f5f5f5 !important;
+            font-weight: 500;
+        }
+
+            .navbar-brand:hover, .nav-link:hover {
+                color: #d7ccc8 !important;
+            }
+
+            .navbar-brand i {
+                margin-right: 8px;
+            }
+
+        .footer {
+            background-color: #4e342e;
+            color: #f5f5f5;
+            padding: 20px;
+        }
+
+            .footer a {
+                color: #d7ccc8;
+            }
+
+                .footer a:hover {
+                    color: #ffffff;
+                }
+
+        h1, h2, h3 {
+            font-family: 'Merriweather', serif;
+            color: #4e342e;
+        }
+
+        .btn-primary {
+            background-color: #8d6e63;
+            border-color: #8d6e63;
+        }
+
+            .btn-primary:hover {
+                background-color: #6d4c41;
+                border-color: #6d4c41;
+            }
+        /* Modal styling */
+        .modal-content {
+            background-color: #f9f7f1;
+            border: 1px solid #4e342e;
+        }
+
+        .modal-header, .modal-footer {
+            background-color: #4e342e;
+            color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
+    <!-- Navbar -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BooksManager</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 1rem" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-book"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 19a9 9 0 0 1 9 0a9 9 0 0 1 9 0" /><path d="M3 6a9 9 0 0 1 9 0a9 9 0 0 1 9 0" /><path d="M3 6l0 13" /><path d="M12 6l0 13" /><path d="M21 6l0 13" /></svg>BooksManager
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <!-- User Authentication Links -->
+                <ul class="navbar-nav">
+                    @if (ViewContext.HttpContext.Session.GetString("UserId") != null)
+                    {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <span class="nav-link">Bem-vindo, @ViewContext.HttpContext.Session.GetString("UserName")!</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" href="/Account/Logout">Sair</a>
                         </li>
-                    </ul>
-
-                    <!-- Verifica se o usuário está logado -->
-                    <ul class="navbar-nav">
-                        @if (ViewContext.HttpContext.Session.GetString("UserId") != null)
-                        {
-                            <li class="nav-item">
-                                <span class="nav-link">Bem-vindo, @ViewContext.HttpContext.Session.GetString("UserName")!</span>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Account/Logout">Sair</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Account/Login">Entrar</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Account/Register">Registrar-se</a>
-                            </li>
-                        }
-                    </ul>
-
-                </div>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Account/Login">Entrar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Account/Register">Registrar-se</a>
+                        </li>
+                    }
+                </ul>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+    <!-- Main Content -->
+        <main role="main" class="w-100">
             @RenderBody()
         </main>
-    </div>
 
-    <footer class="border-top footer text-muted">
+    <!-- Footer -->
+    <footer class="footer text-center">
         <div class="container">
-            &copy; 2024 - BooksManager - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - BooksManager
         </div>
     </footer>
 
-    <!-- Image Modal -->
+    <!-- Image Modal for Viewing Book Cover Images -->
     <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -74,12 +132,13 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <img style="width: -moz-available;" id="modalImage" src="" alt="Imagem do Livro" class="img-fluid" />
+                    <img id="modalImage" src="" alt="Imagem do Livro" class="img-fluid" />
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Scripts -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
