update the style of the site and add the description to the books

--- a/BooksManager/BooksManager/Views/Books/Delete.cshtml
+++ b/BooksManager/BooksManager/Views/Books/Delete.cshtml
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="card shadow-lg border-0" style="background-color: #f5f3e6;">
         <div class="card-header text-white" style="background-color: #b23b3b;">
-            <h3 class="mb-0">
+            <h3 class="mb-0 text-white">
                 <i class="bi bi-exclamation-triangle-fill me-2"></i>@ViewData["Title"]
             </h3>
         </div>
