--- a/BooksManager/BooksManager/Views/Books/Details.cshtml
+++ b/BooksManager/BooksManager/Views/Books/Details.cshtml
@@ -3,7 +3,7 @@
 <div class="container m-auto">
     <div class="card shadow-lg border-0" style="background-color: #f5f3e6;">
         <div class="card-header text-white" style="background-color: #6b4f4f;">
-            <h3 class="mb-0">
+            <h3 class="mb-0 text-white">
                 <i class="bi bi-book me-2"></i>@Model.Titulo
             </h3>
         </div>
