--- a/BooksManager/BooksManager/Views/Account/Register.cshtml
+++ b/BooksManager/BooksManager/Views/Account/Register.cshtml
@@ -40,7 +40,7 @@
                             <span asp-validation-for="Role" class="text-danger"></span>
                         </div>
 
-                        <button type="submit" class="btn btn-success w-100">
+                        <button type="submit" class="btn btn-primary w-100">
                             <i class="bi bi-person-check-fill"></i> Registrar
                         </button>
                     </form>
