--- a/BooksManager/BooksManager/Views/Books/Index.cshtml
+++ b/BooksManager/BooksManager/Views/Books/Index.cshtml
@@ -11,7 +11,7 @@
 
     <!-- Add Book Button -->
     <div class="text-end mb-4">
-        <a asp-action="Create" class="btn btn-success">
+        <a asp-action="Create" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Adicionar Livro
         </a>
     </div>
