--- a/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
+++ b/BooksManager/BooksManager/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             font-family: 'Georgia', serif;
             display: grid;
             min-height: 100dvh;
-            grid-template-rows: 1fr auto;
+            grid-template-rows: auto 1fr auto;
         }
 
         .navbar {
